(waybridge) match IDs, handle DISPLAYHINT (resize)
Xwayland rootless window management closer to being useful, mostly
focus / grab management and special window types to go. To try:

arcan-wayland -xwl -trace 1024 -exec Xwayland -rootless

--- a/src/tools/waybridge/CMakeLists.txt
+++ b/src/tools/waybridge/CMakeLists.txt
@@ -99,7 +99,7 @@ SET(SOURCES
 add_executable(arcan-wayland ${SOURCES})
 add_executable(arcan-xwayland-wm xwlwm/xwlwm.c)
 target_link_libraries(arcan-wayland ${LIBRARIES})
-target_link_libraries(arcan-xwayland-wm xcb xcb-composite)
+target_link_libraries(arcan-xwayland-wm xcb xcb-composite ${ARCAN_SHMIF_LIBRARY} pthread)
 
 add_sanitizers(${PROJECT_NAME})
 install(TARGETS ${PROJECT_NAME} DESTINATION bin)
