(arcan-net) netpipe test mode added
This pushes multiple cleanups in the networking proxy implementation.
It should be 'working' enough to start moving events back and forth, but
something fails in the REGISTER/ACTIVATE stage on the way, leaving the
client dangling in video-buffer commit.

It is likely that this is somewhere in the arcan<->shmif<->shmif-server
implementation that needs to be stepped through in a different env. as
the same sortof behavior persists in tests/core/proxycon.

--- a/src/tools/netproxy/CMakeLists.txt
+++ b/src/tools/netproxy/CMakeLists.txt
@@ -18,6 +18,8 @@ add_definitions(
 	-DPOSIX_C_SOURCE
 	-DGNU_SOURCE
 	-Wno-unused-function
+	-pthread
+	-fPIC
 )
 
 include(ExternalProject)
@@ -49,6 +51,7 @@ include_directories(
 
 SET(LIBRARIES
 	m
+	pthread
 	${ARCAN_SHMIF_LIBRARY}
 	${ARCAN_SHMIF_SERVER_LIBRARY}
 )
@@ -67,7 +70,6 @@ set_property(TARGET arcan-net PROPERTY CXX_STANDARD 11)
 set_property(TARGET arcan-netpipe PROPERTY C_STANDARD 11)
 
  target_link_libraries(arcan-net ${LIBRARIES}
-	pthread
 	${CMAKE_CURRENT_BINARY_DIR}/udt-prefix/src/udt-build/libudt.a
 )
 target_link_libraries(arcan-netpipe ${LIBRARIES})
