--- a/src/tools/netproxy/CMakeLists.txt
+++ b/src/tools/netproxy/CMakeLists.txt
@@ -22,6 +22,8 @@ add_definitions(
 	-fPIC
 )
 
+find_package(Sanitizers REQUIRED)
+
 include(ExternalProject)
 
 ExternalProject_Add(udt
@@ -65,6 +67,8 @@ set(SOURCES
 add_executable( arcan-netpipe ${SOURCES} netpipe.c)
 add_executable( arcan-net ${SOURCES} netproxy.cpp)
 add_dependencies( arcan-net udt )
+add_sanitizers( arcan-netpipe )
+add_sanitizers( arcan-net )
 
 set_property(TARGET arcan-net PROPERTY CXX_STANDARD 11)
 set_property(TARGET arcan-netpipe PROPERTY C_STANDARD 11)
